ingress/deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssp-deployment-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ssp-dev-v2
  template:
    metadata:
      labels:
        app: ssp-dev-v2
    spec:
      containers:
      - name: frontend-ssp
        image: persevcareers6577/deploymentstrategy:v2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ssp-service-v2
spec:
  selector:
    app: ssp-dev-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
